css/styles.css
:root {
  --color-bg: oklch(98% 0 0);
  --color-text: oklch(26% 0 0);
  --color-text-light-1: oklch(60% 0 0);
  --color-text-light-2: oklch(70% 0 0);
  --color-text-hover: oklch(80% 0.13 170); 
}

body {
  color: var(--color-text);
  font-family: 'Inter', sans-serif;
}

main {
  height: 100svh;
  position: relative;
}

header {
  display: flex;
  left: 0;
  padding: 1.5rem;
  position: fixed;
  right: 0;
  top: 0;
}

.content {
  margin: 0 auto;
  max-width: 600px;
  padding: 0 1.5rem;

  @media (orientation: landscape) {
    display: flex;
    flex-direction: row;
    max-width: 800px;
  }
}

section {
  align-items: center;
  display: flex;
  height: 100%;
}

.logo-wrap {
  align-items: baseline;
  width: 90%;
}

.logo {
  display: inline-block;
  font-size: 1.3rem;
  font-weight: 600;
  margin-right: 10px;
}

.tagline {
  font-size: 0.8rem;
  font-weight: 400;
}

.social-links {
  align-items: center;
  display: flex;
  justify-content: end;
  width: 10%;
}

.icon-github {
  fill: var(--color-text);
  height: 1.5rem;
  width: 1.5rem;
}
.icon-github:hover {
  fill: var(--color-text-hover);
}

.screenshot {
  border-radius: 2rem;
  height: auto;
  display: block;
  margin: 0 auto;
  max-width: 45svh;
  width: 100%;

  @media (orientation: landscape) {
    height: auto;
    max-width: 50%;
    width: 50svh;
  }
}

.detail {
  margin: 1.5rem 0 0;

  @media (orientation: landscape) {
    margin: 1.5rem;
  }
}

.section-heading {
  align-items: baseline;
  display: flex;
  justify-content: space-between;
  margin-bottom: 1rem;
  position: relative;
}

h2 {
  font-size: 1.6rem;
  font-weight: 600;
  margin: 0;
}

.date {
  color: var(--color-text-light-2);
  font-size: 0.8rem;
  margin: 0;
}

.description {
  margin-bottom: 1.2rem;
}

.tools {
  list-style: none;
  margin: 0;
  padding: 0;
}
.tools li {
  background-color: var(--color-bg);
  border-radius: 0.4rem;
  color: var(--color-text-light-1);
  display: inline-block;
  font-size: 0.8rem;
  margin-bottom: 0.4rem;
  margin-right: 0.4rem;
  padding: 0.4rem 0.8rem;
}

.link {
  color: var(--color-text);
  display: block;
  font-weight: 600;
  position: relative;
  text-align: right;
  text-decoration: none;
  top: 2rem;
}
.link svg {
  height: 1rem;
}

